--- a/natours/index.html
+++ b/natours/index.html
@@ -34,7 +34,8 @@
             <div class="col-1-of-2">
                 <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero
+                    repellat quis consequatur
                     ducimus quam nisi exercitationem omnis earum qui.
                 </p>
 
@@ -61,28 +62,32 @@
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-world"></i>
                     <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
-                    <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur</p>
+                    <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum
+                        sapiente aspernatur libero repellat quis consequatur</p>
                 </div>
             </div>
             <div class="col-1-of-4">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-compass"></i>
                     <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
-                    <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur</p>
+                    <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum
+                        sapiente aspernatur libero repellat quis consequatur</p>
                 </div>
             </div>
             <div class="col-1-of-4">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-map"></i>
                     <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
-                    <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur</p>
+                    <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum
+                        sapiente aspernatur libero repellat quis consequatur</p>
                 </div>
             </div>
             <div class="col-1-of-4">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-heart"></i>
                     <h3 class="heading-tertiary u-margin-bottom-small">Live a helthier life</h3>
-                    <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur</p>
+                    <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum
+                        sapiente aspernatur libero repellat quis consequatur</p>
                 </div>
             </div>
         </div>
@@ -239,6 +244,52 @@
 
         <div class="u-center-text u-margin-top-huge">
             <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+    </section>
+
+    <section class="section-book">
+        <div class="row">
+            <div class="book">
+                <div class="book__form">
+                    <form action="#" class="form">
+                        <div class="u-margin-bottom-medium">
+                            <h2 class="heading-secondary">
+                                Start booking now
+                            </h2>
+                        </div>
+
+                        <div class="form__group">
+                            <input type="text" class="form__input" placeholder="Full name" id="name" required>
+                            <label for="name" class="form__label">Full name</label>
+                        </div>
+
+                        <div class="form__group">
+                            <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                            <label for="email" class="form__label">Email address</label>
+                        </div>
+
+                        <div class="form__group u-margin-bottom-medium">
+
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="small" name="size">
+                                <label class="form__radio-label" for="small">
+                                    <span class="form__radio-button"></span>
+                                    Small tour group</label>
+                            </div>
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id="large" name="size">
+                                <label class="form__radio-label" for="large">
+                                    <span class="form__radio-button"></span>
+                                    Large tour group</label>
+                            </div>
+                        </div>
+
+                        <div class="form__group">
+                            <button class="btn btn--green">Next step &rarr;</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
 </main>
