Etter 51: Building the Navigation - Part 3

--- a/natours/index.html
+++ b/natours/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
@@ -294,13 +295,15 @@
                                 <input type="radio" class="form__radio-input" id="small" name="size">
                                 <label class="form__radio-label" for="small">
                                     <span class="form__radio-button"></span>
-                                    Small tour group</label>
+                                    Small tour group
+                                </label>
                             </div>
                             <div class="form__radio-group">
                                 <input type="radio" class="form__radio-input" id="large" name="size">
                                 <label class="form__radio-label" for="large">
                                     <span class="form__radio-button"></span>
-                                    Large tour group</label>
+                                    Large tour group
+                                </label>
                             </div>
                         </div>
 
