--- a/natours/index.html
+++ b/natours/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,11 +25,11 @@
 
     <nav class="navigation__nav">
         <ul class="navigation__list">
-            <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natous</a></li>
-            <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benfits</a></li>
-            <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
-            <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
-            <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+            <li class="navigation__item"><a href="#section-about" class="navigation__link"><span>01</span>About Natous</a></li>
+            <li class="navigation__item"><a href="#section-features" class="navigation__link"><span>02</span>Your benfits</a></li>
+            <li class="navigation__item"><a href="#section-tours" class="navigation__link"><span>03</span>Popular tours</a></li>
+            <li class="navigation__item"><a href="#section-stories" class="navigation__link"><span>04</span>Stories</a></li>
+            <li class="navigation__item"><a href="#section-book" class="navigation__link"><span>05</span>Book now</a></li>
         </ul>
     </nav>
 </div>
@@ -43,11 +43,11 @@
             <span class="heading-primary--main">Outdoors</span>
             <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
     </div>
 </header>
 <main>
-    <section class="section-about">
+    <section class="section-about" id="section-about">
         <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">Exiting tours for adventurous people</h2>
         </div>
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <section class="section-features">
+    <section class="section-features" id="section-features">
         <div class="row">
             <div class="col-1-of-4">
                 <div class="feature-box">
@@ -212,7 +212,7 @@
         </div>
     </section>
 
-    <section class="section-stories">
+    <section class="section-stories" id="section-stories">
         <div class="bg-video">
             <video class="bg-video__content" autoplay muted loop>
                 <source src="img/video.mp4" type="video/mp4">
@@ -268,7 +268,7 @@
         </div>
     </section>
 
-    <section class="section-book">
+    <section class="section-book" id="section-book">
         <div class="row">
             <div class="book">
                 <div class="book__form">
@@ -343,5 +343,30 @@
         </div>
     </div>
 </footer>
+<div class="popup" id="popup">
+    <div class="popup__content">
+        <div class="popup__left">
+            <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+            <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+            <a href="#section-tours" class="popup__close">&times;</a>
+            <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+            <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read this terms before booking</h3>
+            <p class="popup__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
+                amet massa vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim
+                sit. Vitae semper quis lectus nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
+                gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque laoreet.
+                Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis. Faucibus
+                vitae aliquet nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
+                vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
+                euismod nisi porta.
+            </p>
+            <a href="#" class="btn btn--green">Book now</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
